ingress/ideployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: ingress-nginx
  # namespace: default
  
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: first-deployment
        image: akashsingh60/first
        ports:
        - containerPort: 8000
