ingress/iservice.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-service
# spec:
#   type: NodePort
#   selector:
#     app: app1
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8000

apiVersion: v1
kind: Service
metadata:
  name: my-service-2
  namespace: ingress-nginx
  labels:
    app: django-app
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      # nodeport: 30002
