ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx 
spec:
  rules:
    - host: practice.com
      http:
        paths:
          - path: /chandrayaan2
            pathType: Prefix
            backend:
              service:
                name: my-service-2
                port:
                  number: 80
